--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <a href="#contact">Hire Me<i class="ri-user-follow-line"></i></a>
             </div>
             <div class="avatar_img">
-              <img src="/assets/images/avatar images/Home_Image.png" alt="image">
+              <img src="/assets/images/avatar images/home_Image.png" alt="image">
             </div>
             <div class="avatar_info">
               <div class="text_content">
@@ -169,7 +169,7 @@
                 <a href="#contact">Hire Me<i class="ri-user-follow-line"></i></a>
               </div>
               <div class="rana_p_fo_main_btn border_btn">
-                <a href="assets/pdf/Sue-Ayers-CV.pdf" download>download CV</a>
+                <a href="/assets/cv/rana web cv.pdf" download>download CV</a>
               </div>
             </div>
           </div>
